# nixctl

./: Cargo.toml  README.md  build.rs  config.toml  flake.nix  todo.org
.github/workflows/: main.yml
completions/: _nixctl  _nixctl.ps1  nixctl.bash  nixctl.elv  nixctl.fish  result
src/: main.rs
