[package]
name = "nixctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.1"
colored = "2.1.0"
dialoguer = "0.11.0"
duct = "0.13.7"
duct_sh = "0.13.7"
[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
clap_complete = "4.5.1"
colored = "2.1.0"
dialoguer = "0.11.0"
duct = "0.13.7"
duct_sh = "0.13.7"
