[package]
name = "nixctl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
clap_complete = "4.5.1"
clap = { version = "4.5.4", features = ["derive", "env"] }
tempfile = "3.5.0"
colored = "2.1.0"
dialoguer = "0.11.0"
duct = "0.13.7"
duct_sh = "0.13.7"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
chrono = "0.4.41"
regex = "1.11.1"
[dependencies]
clap = { version = "4.5.4", features = ["derive", "env"] }
tempfile = "3.5.0"
clap_complete = "4.5.1"
colored = "2.1.0"
dialoguer = "0.11.0"
duct = "0.13.7"
duct_sh = "0.13.7"
config = "0.14"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.98"
chrono = "0.4.41"
regex = "1.11.1"
